# http-directory-browser-server

./: Cargo.toml
src/: main.rs  zipfile.rs
test_files/: file2.txt
