[package]
name = "http-directory-browser-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
anyhow = "1.0.81"
env_logger = "0.11.3"
log = "0.4.21"
walkdir = "2.5.0"
zip = "0.6.6"
